--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,117 @@
-.App {
-  text-align: center;
+body {
+    font-size: 1em;
+    color: grey;
+    font-weight: bolder;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title {
+    color: orangered;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#nav a {
+    color: orangered;
+    font-weight: bold;
+    font-size: 1.5em;
+    text-decoration: none;
+    margin-top: 5vh;
+}
+#nav a:hover {
+    color: gray;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#Home {
+    margin: 0 auto;
+    width: 85vw;
+}
+#profile{
+    margin: 0 auto;
+    padding: 1em;
+    width: 50vw;
+    text-align: center;
+}
+#profile img{
+    border-radius: 45%;
+    width: 12em;
+    height: 12em;
+}
+.navbar-brand a{
+    text-decoration: none;
+}
+.highlight{
+    color: orangered;
+}
+.highlightSkill{
+    color: rgba(255, 255, 255, 0.5);
+}
+#skills{
+    width: 60%;
+    margin: 0 auto;
+    text-align: center;
+    padding: 1em 0;
+}
+#placeholder{
+    background-color: rgba(255, 255, 255, 0.05);
+    padding: 0 1rem;
+}
+#placeholder h3{
+    text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+#home-bottom{
+    width: 70%;
+    margin: 0 auto;
+    margin-top: 1em;
+    background-color: rgba(255, 255, 255, 0.05);
+    padding: 1rem 1rem;
+    text-align: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#aws-buttons{
+    width: 50%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+#aws-buttons button{
+    color: orangered;
+}
+#experience{
+    text-align: center;
+    margin: 0 auto;
+    width: 90vw;
+    min-height: 90vh;
+}
+#experience h1{
+    padding: 1em 0;
+}
+#experience button{
+    color: orangered;
+}
+.accordion-body{
+    text-align: left;
+    font-size: 0.8rem;
+}
+.accordion-body small{
+    color: gray;
+}
+.nav-tabs{
+    --bs-nav-tabs-link-active-bg: rgba(255, 255, 255, 0.05);
+}
+.accordion{
+    --bs-accordion-active-color: gray;
+    --bs-accordion-btn-focus-border-color: gray;
+    --bs-accordion-btn-focus-box-shadow: orangered;
+    --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 16 16%27 fill=%27%23212529%27%3e%3cpath fill-rule=%27evenodd%27 d=%27M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z%27/%3e%3c/svg%3e");
+}
+.footer {
+    padding: 0.8em;
+    font-size: 1em;
+    color: white;
+    width: 100%;
+    text-align: center;
+}
+#email{
+    color: white;
+    text-decoration: none;
 }
