--- a/src/App.css
+++ b/src/App.css
@@ -22,17 +22,20 @@ body {
 #Home {
     margin: 0 auto;
     width: 85vw;
+    
 }
 #profile{
     margin: 0 auto;
     padding: 1em;
     width: 50vw;
     text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 #profile img{
     border-radius: 45%;
-    width: 12em;
-    height: 12em;
+    width: 50%;
+    height: 50%;
 }
 .navbar-brand a{
     text-decoration: none;
@@ -44,11 +47,38 @@ body {
     color: rgba(255, 255, 255, 0.5);
 }
 #skills{
-    width: 60%;
+    width: 30%;
     margin: 0 auto;
     text-align: center;
     padding: 1em 0;
+    display: flex;
+    flex-direction: column;
 }
+.progress{
+    width: 100%;
+}
+@media screen and (max-width: 400px) {
+    .progress {
+    width: 100%;
+    }
+    #skills{
+        width: 80%;
+    }
+    #profile img{
+        width: 15em;
+        height: 15em;
+    }
+    #profile{
+        width: 100%;
+    }
+    #footer-btn{
+        display: flex;
+        flex-flow: row;
+        margin-top: 1em;
+    }
+    
+  }
+
 #placeholder{
     background-color: rgba(255, 255, 255, 0.05);
     padding: 0 1rem;
