--- a/src/App.css
+++ b/src/App.css
@@ -9,22 +9,24 @@ body {
 }
 
 #nav a {
-    color: orangered;
-    font-weight: bold;
-    font-size: 1.5em;
-    text-decoration: none;
-    margin-top: 5vh;
-}
-#nav a:hover {
     color: gray;
+    font-size: 1em;
+    text-decoration: none;
 }
 
+#nav a:hover {
+    color: orangered;
+}
+.footer a{
+    color: white;
+}
 #Home {
     margin: 0 auto;
     width: 85vw;
-    
+
 }
-#profile{
+
+#profile {
     margin: 0 auto;
     padding: 1em;
     width: 50vw;
@@ -32,21 +34,28 @@ body {
     display: flex;
     flex-direction: column;
 }
-#profile img{
+
+#profile img {
     border-radius: 45%;
     width: 50%;
     height: 50%;
 }
-.navbar-brand a{
+
+.navbar-brand a {
     text-decoration: none;
 }
-.highlight{
+.navbar-nav{
+    padding: 0 0.3em;
+}
+.highlight {
     color: orangered;
 }
-.highlightSkill{
+
+.highlightSkill {
     color: rgba(255, 255, 255, 0.5);
 }
-#skills{
+
+#skills {
     width: 30%;
     margin: 0 auto;
     text-align: center;
@@ -54,48 +63,74 @@ body {
     display: flex;
     flex-direction: column;
 }
-.progress{
+
+.progress {
     width: 100%;
 }
-@media screen and (max-width: 400px) {
-    .progress {
-    width: 100%;
-    }
-    #skills{
-        width: 80%;
-    }
-    #profile img{
-        width: 15em;
-        height: 15em;
-    }
-    #profile{
-        width: 100%;
-    }
-    #footer-btn{
-        display: flex;
-        flex-flow: row;
-        margin-top: 1em;
-    }
-    
-  }
 
-#placeholder{
-    background-color: rgba(255, 255, 255, 0.05);
-    padding: 0 1rem;
-}
-#placeholder h3{
-    text-align: center;
-}
-
-#home-bottom{
+#home-bottom {
     width: 70%;
     margin: 0 auto;
     margin-top: 1em;
     background-color: rgba(255, 255, 255, 0.05);
     padding: 1rem 1rem;
     text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
-#aws-buttons{
+
+@media screen and (max-width: 400px) {
+    #Home{
+        width: 100%;
+    }
+    .progress {
+        width: 100%;
+    }
+
+    #skills {
+        width: 80%;
+    }
+
+    #profile img {
+        width: 15em;
+        height: 15em;
+    }
+
+    #profile {
+        width: 100%;
+    }
+
+    #footer-btn {
+        display: flex;
+        flex-flow: row;
+        margin-top: 1em;
+    }
+
+    #home-bottom {
+        flex-direction: column;
+        align-content: space-evenly;
+    }
+    #placeholder{
+        width: 100%;
+        padding: 0.2rem 0;
+    }
+
+}
+
+#placeholder {
+    background-color: rgba(255, 255, 255, 0.05);
+    padding: 0.3rem 1rem;
+    width: 80%;
+    margin: 0 auto;
+}
+
+#placeholder h3 {
+    text-align: center;
+}
+
+
+#aws-buttons {
     width: 50%;
     margin: 0 auto;
     display: flex;
@@ -103,37 +138,46 @@ body {
     justify-content: space-around;
     flex-wrap: wrap;
 }
-#aws-buttons button{
+
+#aws-buttons button {
     color: orangered;
 }
-#experience{
+
+#experience {
     text-align: center;
     margin: 0 auto;
     width: 90vw;
     min-height: 90vh;
 }
-#experience h1{
+
+#experience h1 {
     padding: 1em 0;
 }
-#experience button{
+
+#experience button {
     color: orangered;
 }
-.accordion-body{
+
+.accordion-body {
     text-align: left;
     font-size: 0.8rem;
 }
-.accordion-body small{
+
+.accordion-body small {
     color: gray;
 }
-.nav-tabs{
+
+.nav-tabs {
     --bs-nav-tabs-link-active-bg: rgba(255, 255, 255, 0.05);
 }
-.accordion{
+
+.accordion {
     --bs-accordion-active-color: gray;
     --bs-accordion-btn-focus-border-color: gray;
     --bs-accordion-btn-focus-box-shadow: orangered;
     --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 16 16%27 fill=%27%23212529%27%3e%3cpath fill-rule=%27evenodd%27 d=%27M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z%27/%3e%3c/svg%3e");
 }
+
 .footer {
     padding: 0.8em;
     font-size: 1em;
@@ -141,7 +185,8 @@ body {
     width: 100%;
     text-align: center;
 }
-#email{
+
+#email {
     color: white;
     text-decoration: none;
 }
