--- a/src/App.css
+++ b/src/App.css
@@ -17,13 +17,14 @@ body {
 #nav a:hover {
     color: orangered;
 }
-.footer a{
+
+.footer a {
     color: white;
 }
+
 #Home {
     margin: 0 auto;
     width: 85vw;
-
 }
 
 #profile {
@@ -36,22 +37,25 @@ body {
 }
 
 #profile img {
-    border-radius: 45%;
-    width: 50%;
-    height: 50%;
+    border-radius: 5%;
+    width: 70%;
+    height: 60%;
 }
 
 .navbar-brand a {
     text-decoration: none;
 }
-.navbar-nav{
+
+.navbar-nav {
     padding: 0 0.3em;
 }
+
 .highlight {
     color: orangered;
 }
 
 .highlightSkill {
+    font-size: 20px;
     color: rgba(255, 255, 255, 0.5);
 }
 
@@ -69,21 +73,30 @@ body {
 }
 
 #home-bottom {
-    width: 70%;
+    width: 80%;
     margin: 0 auto;
-    margin-top: 1em;
     background-color: rgba(255, 255, 255, 0.05);
-    padding: 1rem 1rem;
-    text-align: center;
+    padding: 0.8rem 1rem;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    border-radius: 10px;
+}
+
+#aws-buttons {
+    width: 50%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 @media screen and (max-width: 400px) {
-    #Home{
+    #Home {
         width: 100%;
     }
+
     .progress {
         width: 100%;
     }
@@ -93,8 +106,8 @@ body {
     }
 
     #profile img {
-        width: 15em;
-        height: 15em;
+        width: 100%;
+        height: 100%;
     }
 
     #profile {
@@ -111,11 +124,17 @@ body {
         flex-direction: column;
         align-content: space-evenly;
     }
-    #placeholder{
+
+    #aws-buttons {
         width: 100%;
-        padding: 0.2rem 0;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
     }
 
+    .navbar-nav a {
+        padding: 0.4em 0;
+    }
 }
 
 #placeholder {
@@ -123,20 +142,11 @@ body {
     padding: 0.3rem 1rem;
     width: 80%;
     margin: 0 auto;
+    border-radius: 10px;
 }
 
 #placeholder h3 {
     text-align: center;
-}
-
-
-#aws-buttons {
-    width: 50%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
 }
 
 #aws-buttons button {
