--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@ body {
     padding-top: env(safe-area-inset-top);
 }
 
+meta[name="viewport"] {
+    viewport-fit:cover;
+}
+
 .title {
     color: orangered;
 }
@@ -14,12 +18,14 @@ body {
     font-size: 1em;
     text-decoration: none;
 }
-.scroll img{
+
+.scroll img {
     background-color: rgba(128, 128, 128, 0.2);
     width: 5em;
     height: 5em;
     border-radius: 100%;
 }
+
 .scrollBtn {
     border-color: transparent;
     background: transparent;
@@ -110,6 +116,10 @@ body {
 }
 
 @media screen and (max-width: 400px) {
+    #home-bottom .vr{
+        width: 100%;
+        min-height: 0.1em;
+    }
     #Home {
         width: 100%;
     }
